--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,16 +31,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     // Displaying images
     implementation 'com.google.firebase:firebase-core:15.0.0'
     implementation 'com.android.support:multidex:1.0.3'
@@ -48,10 +46,6 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.firebaseui:firebase-ui:3.3.1'
     implementation 'com.google.firebase:firebase-storage:9.6.0'
-    compile 'com.google.firebase:firebase-storage:9.6.0'
-
-
-
 
 }
 apply plugin: 'com.google.gms.google-services'
