--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     // Displaying images
     implementation 'com.google.firebase:firebase-core:15.0.0'
