--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     })
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     // Displaying images
     implementation 'com.google.firebase:firebase-core:15.0.0'
     implementation 'com.android.support:multidex:1.0.3'
