--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MessagesActivity"></activity>
-        <activity android:name=".activities.UserProfileActivity" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +16,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.ConversationsActivity" />
+        <activity android:name=".activities.ContactsActivity"/>
+        <activity android:name=".activities.MessagesActivity" />
+        <activity android:name=".activities.UserProfileActivity" />
     </application>
 
 </manifest>
